sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:16: error: 'while' expected but '}' found.
  }
  ^AlgCocktailSort1:17: error: ';' expected but 'while' found.
} while (a == false)
  ^AlgCocktailSort1:18: error: Unmatched closing brace '}' ignored here
} 
^AlgCocktailSort1:21: error: eof expected but '}' found.
}
^